fix overflow table

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ form button {
 .table, .form-horizontal {
   background-color: #EEEEEE;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .table>tbody>tr>td {
